# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
# Brad T. Aagaard, U.S. Geological Survey
# Charles A. Williams, GNS Science
# Matthew G. Knepley, University at Buffalo
#
# This code was developed as part of the Computational Infrastructure
# for Geodynamics (http://geodynamics.org).
#
# Copyright (c) 2010-2022 University of California, Davis
#
# See LICENSE.md for license information.
#
# ----------------------------------------------------------------------

dist_noinst_DATA = \
	conf.py \
	requirements.txt \
	_static/css/custom.css \
	_static/images/cig_logo_dots.png \
	_static/images/cig_short_nolabel.png \
	_static/images/cig_short_pylith.png \
	_templates/sidebar-cig.html \
	tikz-styles/figcolors.tex \
	index.md \
	references.bib \
	references.md \
	intro/development-plan.md \
	intro/images/intermediate.png \
	intro/images/difficult.png \
	intro/images/expert.png \
	intro/images/easy.png \
	intro/index.md \
	intro/preface.md \
	intro/quickstart.md \
	intro/release-notes.md \
	user/appendices/analytical-solns.md \
	user/appendices/figs/airy_stress_axial_extension.pdf \
	user/appendices/figs/airy_stress_axial_extension.svg \
	user/appendices/figs/airy_stress_axial_extension.tex \
	user/appendices/index.md \
	user/benchmarks/figs/savageprescott_diagram.pdf \
	user/benchmarks/figs/savageprescott_diagram.svg \
	user/benchmarks/figs/savageprescott_soln_profiles.pdf \
	user/benchmarks/figs/savageprescott_soln_profiles.svg \
	user/benchmarks/figs/strikeslip_convergence.pdf \
	user/benchmarks/figs/strikeslip_convergence.svg \
	user/benchmarks/figs/strikeslip_error_hex8_0250m.pdf \
	user/benchmarks/figs/strikeslip_error_hex8_0250m.png \
	user/benchmarks/figs/strikeslip_error_hex8_0500m.pdf \
	user/benchmarks/figs/strikeslip_error_hex8_0500m.png \
	user/benchmarks/figs/strikeslip_error_hex8_1000m.pdf \
	user/benchmarks/figs/strikeslip_error_hex8_1000m.png \
	user/benchmarks/figs/strikeslip_error_tet4_0250m.pdf \
	user/benchmarks/figs/strikeslip_error_tet4_0250m.png \
	user/benchmarks/figs/strikeslip_error_tet4_0500m.pdf \
	user/benchmarks/figs/strikeslip_error_tet4_0500m.png \
	user/benchmarks/figs/strikeslip_error_tet4_1000m.pdf \
	user/benchmarks/figs/strikeslip_error_tet4_1000m.png \
	user/benchmarks/figs/strikeslip_geometry.pdf \
	user/benchmarks/figs/strikeslip_geometry.png \
	user/benchmarks/figs/strikeslip_scaling.pdf \
	user/benchmarks/figs/strikeslip_scaling.svg \
	user/benchmarks/figs/strikeslip_soln.pdf \
	user/benchmarks/figs/strikeslip_soln.png \
	user/benchmarks/figs/strikeslip_summary.pdf \
	user/benchmarks/figs/strikeslip_summary.svg \
	user/benchmarks/index.md \
	user/benchmarks/quasistatic-strikeslip.md \
	user/benchmarks/savage-prescott.md \
	user/benchmarks/scec-dynrup.md \
	user/components/apps/EqInfoApp.md \
	user/components/apps/PyLithApp.md \
	user/components/apps/index.md \
	user/components/bc/AbsorbingDampers.md \
	user/components/bc/AuxSubfieldsAbsorbingDampers.md \
	user/components/bc/AuxSubfieldsTimeDependent.md \
	user/components/bc/BoundaryCondition.md \
	user/components/bc/DirichletTimeDependent.md \
	user/components/bc/NeumannTimeDependent.md \
	user/components/bc/ZeroDB.md \
	user/components/bc/index.md \
	user/components/faults/FaultCohesive.md \
	user/components/faults/FaultCohesiveKin.md \
	user/components/faults/FaultCohesiveImpulses.md \
	user/components/faults/KinSrc.md \
	user/components/faults/KinSrcBrune.md \
	user/components/faults/KinSrcConstRate.md \
	user/components/faults/KinSrcLiuCos.md \
	user/components/faults/KinSrcRamp.md \
	user/components/faults/KinSrcStep.md \
	user/components/faults/KinSrcTimeHistory.md \
	user/components/faults/SingleRupture.md \
	user/components/faults/index.md \
	user/components/index.md \
	user/components/materials/AuxSubfieldsElasticity.md \
	user/components/materials/AuxSubfieldsIsotropicLinearElasticity.md \
	user/components/materials/AuxSubfieldsIsotropicLinearGenMaxwell.md \
	user/components/materials/AuxSubfieldsIsotropicLinearMaxwell.md \
	user/components/materials/AuxSubfieldsIsotropicLinearPoroelasticity.md \
	user/components/materials/AuxSubfieldsIsotropicPowerLaw.md \
	user/components/materials/AuxSubfieldsPoroelasticity.md \
	user/components/materials/DerivedSubfieldsElasticity.md \
	user/components/materials/Elasticity.md \
	user/components/materials/Homogeneous.md \
	user/components/materials/IncompressibleElasticity.md \
	user/components/materials/IsotropicLinearElasticity.md \
	user/components/materials/IsotropicLinearGenMaxwell.md \
	user/components/materials/IsotropicLinearIncompElasticity.md \
	user/components/materials/IsotropicLinearMaxwell.md \
	user/components/materials/IsotropicLinearPoroelasticity.md \
	user/components/materials/IsotropicPowerLaw.md \
	user/components/materials/Material.md \
	user/components/materials/Poroelasticity.md \
	user/components/materials/RheologyElasticity.md \
	user/components/materials/RheologyIncompressibleElasticity.md \
	user/components/materials/RheologyPoroelasticity.md \
	user/components/materials/index.md \
	user/components/meshio/DataWriter.md \
	user/components/meshio/DataWriterHDF5.md \
	user/components/meshio/DataWriterHDF5Ext.md \
	user/components/meshio/DataWriterVTK.md \
	user/components/meshio/MeshIOAscii.md \
	user/components/meshio/MeshIOCubit.md \
	user/components/meshio/MeshIOObj.md \
	user/components/meshio/OutputObserver.md \
	user/components/meshio/OutputPhysics.md \
	user/components/meshio/OutputSoln.md \
	user/components/meshio/OutputSolnBoundary.md \
	user/components/meshio/OutputSolnDomain.md \
	user/components/meshio/OutputSolnPoints.md \
	user/components/meshio/OutputTrigger.md \
	user/components/meshio/OutputTriggerStep.md \
	user/components/meshio/OutputTriggerTime.md \
	user/components/meshio/PointsList.md \
	user/components/meshio/index.md \
	user/components/problems/GreensFns.md \
	user/components/problems/InitialCondition.md \
	user/components/problems/InitialConditionDomain.md \
	user/components/problems/InitialConditionPatch.md \
	user/components/problems/Physics.md \
	user/components/problems/Problem.md \
	user/components/problems/ProblemDefaults.md \
	user/components/problems/ProgressMonitor.md \
	user/components/problems/ProgressMonitorTime.md \
	user/components/problems/SolnDisp.md \
	user/components/problems/SolnDispLagrange.md \
	user/components/problems/SolnDispPres.md \
	user/components/problems/SolnDispPresLagrange.md \
	user/components/problems/SolnDispPresTracStrain.md \
	user/components/problems/SolnDispPresTracStrainVelPdotTdot.md \
	user/components/problems/SolnDispPresVel.md \
	user/components/problems/SolnDispVel.md \
	user/components/problems/SolnDispVelLagrange.md \
	user/components/problems/Solution.md \
	user/components/problems/SolutionSubfield.md \
	user/components/problems/SubfieldDisplacement.md \
	user/components/problems/SubfieldLagrangeFault.md \
	user/components/problems/SubfieldPressure.md \
	user/components/problems/SubfieldPressureDot.md \
	user/components/problems/SubfieldTemperature.md \
	user/components/problems/SubfieldTraceStrain.md \
	user/components/problems/SubfieldTraceStrainDot.md \
	user/components/problems/SubfieldVelocity.md \
	user/components/problems/TimeDependent.md \
	user/components/problems/index.md \
	user/components/testing/UnitTestApp.md \
	user/components/testing/index.md \
	user/components/toc.json \
	user/components/topology/Distributor.md \
	user/components/topology/MeshGenerator.md \
	user/components/topology/MeshImporter.md \
	user/components/topology/MeshImporterDist.md \
	user/components/topology/MeshRefiner.md \
	user/components/topology/RefineUniform.md \
	user/components/topology/Subfield.md \
	user/components/topology/index.md \
	user/components/update.sh \
	user/components/utils/CollectVersionInfo.md \
	user/components/utils/DumpParameters.md \
	user/components/utils/DumpParametersAscii.md \
	user/components/utils/DumpParametersJson.md \
	user/components/utils/EmptyBin.md \
	user/components/utils/NullComponent.md \
	user/components/utils/PetscManager.md \
	user/components/utils/PropertyList.md \
	user/components/utils/SimulationMetadata.md \
	user/components/utils/index.md \
	user/examples/box-2d/index.md \
	user/examples/box-2d/common-information.md \
	user/examples/box-2d/exercises.md \
	user/examples/box-2d/step01-axialdisp.md \
	user/examples/box-2d/step01_axialdisp-synopsis.md \
	user/examples/box-2d/step02-sheardisp.md \
	user/examples/box-2d/step02_sheardisp-synopsis.md \
	user/examples/box-2d/step03-sheardisptract.md \
	user/examples/box-2d/step03_sheardisptract-synopsis.md \
	user/examples/box-2d/step04-sheardispic.md \
	user/examples/box-2d/step04_sheardispic-synopsis.md \
	user/examples/box-2d/step05-sheardisptractrate.md \
	user/examples/box-2d/step05_sheardisptractrate-synopsis.md \
	user/examples/box-2d/figs/diagrams.tex \
	user/examples/box-2d/figs/generate.sh \
	user/examples/box-2d/figs/geometry.pdf \
	user/examples/box-2d/figs/geometry.svg \
	user/examples/box-2d/figs/mesh.pdf \
	user/examples/box-2d/figs/mesh.svg \
	user/examples/box-2d/figs/step01-diagram.pdf \
	user/examples/box-2d/figs/step01-diagram.svg \
	user/examples/box-2d/figs/step01-solution.png \
	user/examples/box-2d/figs/step02-diagram.pdf \
	user/examples/box-2d/figs/step02-diagram.svg \
	user/examples/box-2d/figs/step02-solution.png \
	user/examples/box-2d/figs/step03-diagram.pdf \
	user/examples/box-2d/figs/step03-diagram.svg \
	user/examples/box-2d/figs/step03-solution.png \
	user/examples/box-2d/figs/step04-solution.png \
	user/examples/box-2d/figs/step05-diagram.pdf \
	user/examples/box-2d/figs/step05-diagram.svg \
	user/examples/box-2d/figs/step05-solution.png \
	user/examples/box-3d/index.md \
	user/examples/box-3d/common-information.md \
	user/examples/box-3d/exercises.md \
	user/examples/box-3d/meshing-cubit.md \
	user/examples/box-3d/meshing-gmsh.md \
	user/examples/box-3d/step01-axialdisp.md \
	user/examples/box-3d/step01_axialdisp-synopsis.md \
	user/examples/box-3d/step02-sheardisp.md \
	user/examples/box-3d/step02_sheardisp-synopsis.md \
	user/examples/box-3d/step03-sheardisptract.md \
	user/examples/box-3d/step03_sheardisptract-synopsis.md \
	user/examples/box-3d/step04-sheardispic.md \
	user/examples/box-3d/step04_sheardispic-synopsis.md \
	user/examples/box-3d/step05-sheardisptractrate.md \
	user/examples/box-3d/step05_sheardisptractrate-synopsis.md \
	user/examples/box-3d/figs/cubit-hex.jpg \
	user/examples/box-3d/figs/cubit-hex.jpg \
	user/examples/box-3d/figs/diagrams.tex \
	user/examples/box-3d/figs/generate.sh \
	user/examples/box-3d/figs/geometry.pdf \
	user/examples/box-3d/figs/geometry.svg \
	user/examples/box-3d/figs/gmsh-hex.png \
	user/examples/box-3d/figs/step01-diagram.pdf \
	user/examples/box-3d/figs/step01-diagram.svg \
	user/examples/box-3d/figs/step01-solution.jpg \
	user/examples/box-3d/figs/step02-diagram.pdf \
	user/examples/box-3d/figs/step02-diagram.svg \
	user/examples/box-3d/figs/step02-solution.jpg \
	user/examples/box-3d/figs/step03-diagram.pdf \
	user/examples/box-3d/figs/step03-diagram.svg \
	user/examples/box-3d/figs/step03-solution.jpg \
	user/examples/box-3d/figs/step04-solution.jpg \
	user/examples/box-3d/figs/step05-diagram.pdf \
	user/examples/box-3d/figs/step05-diagram.svg \
	user/examples/box-3d/figs/step05-solution.jpg \
	user/examples/magma-2d/index.md \
	user/examples/magma-2d/common-information.md \
	user/examples/magma-2d/exercises.md \
	user/examples/magma-2d/meshing-cubit.md \
	user/examples/magma-2d/step01-inflation.md \
	user/examples/magma-2d/step01_inflation-synopsis.md \
	user/examples/magma-2d/figs/diagrams.tex \
	user/examples/magma-2d/figs/generate.sh \
	user/examples/magma-2d/figs/geometry.svg \
	user/examples/magma-2d/figs/geometry.pdf \
	user/examples/magma-2d/figs/step01-diagram.pdf \
	user/examples/magma-2d/figs/step01-diagram.svg \
	user/examples/reverse-2d/index.md \
	user/examples/reverse-2d/common-information.md \
	user/examples/reverse-2d/exercises.md \
	user/examples/reverse-2d/meshing-cubit.md \
	user/examples/reverse-2d/meshing-gmsh.md \
	user/examples/reverse-2d/step01-gravity.md \
	user/examples/reverse-2d/step01_gravity-synopsis.md \
	user/examples/reverse-2d/step02-gravity-refstate.md \
	user/examples/reverse-2d/step02_gravity_refstate-synopsis.md \
	user/examples/reverse-2d/step03-gravity-incompressible.md \
	user/examples/reverse-2d/step03_gravity_incompressible-synopsis.md \
	user/examples/reverse-2d/step04-surfload.md \
	user/examples/reverse-2d/step04_surfload-synopsis.md \
	user/examples/reverse-2d/step05-onefault.md \
	user/examples/reverse-2d/step05_onefault-synopsis.md \
	user/examples/reverse-2d/step06-twofaults-elastic.md \
	user/examples/reverse-2d/step06_twofaults_elastic-synopsis.md \
	user/examples/reverse-2d/step07-twofaults-maxwell.md \
	user/examples/reverse-2d/step07_twofaults_maxwell-synopsis.md \
	user/examples/reverse-2d/step08-twofaults-powerlaw.md \
	user/examples/reverse-2d/step08_twofaults_powerlaw-synopsis.md \
	user/examples/reverse-2d/figs/cubit-quad.png \
	user/examples/reverse-2d/figs/cubit-tri.png \
	user/examples/reverse-2d/figs/diagrams.tex \
	user/examples/reverse-2d/figs/generate.sh \
	user/examples/reverse-2d/figs/geometry.pdf \
	user/examples/reverse-2d/figs/geometry.svg \
	user/examples/reverse-2d/figs/geometry-cubit.pdf \
	user/examples/reverse-2d/figs/geometry-cubit.svg \
	user/examples/reverse-2d/figs/geometry-gmsh.pdf \
	user/examples/reverse-2d/figs/geometry-gmsh.svg \
	user/examples/reverse-2d/figs/gmsh-tri.png \
	user/examples/reverse-2d/figs/step01-diagram.pdf \
	user/examples/reverse-2d/figs/step01-diagram.svg \
	user/examples/reverse-2d/figs/step01-solution.jpg \
	user/examples/reverse-2d/figs/step02-solution.jpg \
	user/examples/reverse-2d/figs/step03-solution.jpg \
	user/examples/reverse-2d/figs/step04-diagram.pdf \
	user/examples/reverse-2d/figs/step04-diagram.svg \
	user/examples/reverse-2d/figs/step04-solution.jpg \
	user/examples/reverse-2d/figs/step05-diagram.pdf \
	user/examples/reverse-2d/figs/step05-diagram.svg \
	user/examples/reverse-2d/figs/step05-solution.jpg \
	user/examples/reverse-2d/figs/step06-diagram.pdf \
	user/examples/reverse-2d/figs/step06-diagram.svg \
	user/examples/reverse-2d/figs/step06-solution.jpg \
	user/examples/reverse-2d/figs/step07-solution.jpg \
	user/examples/strikeslip-2d/index.md \
	user/examples/strikeslip-2d/common-information.md \
	user/examples/strikeslip-2d/exercises.md \
	user/examples/strikeslip-2d/meshing-cubit.md \
	user/examples/strikeslip-2d/meshing-gmsh.md \
	user/examples/strikeslip-2d/step01-slip.md \
	user/examples/strikeslip-2d/step01_slip-synopsis.md \
	user/examples/strikeslip-2d/step02-slip-velbc.md \
	user/examples/strikeslip-2d/step02_slip_velbc-synopsis.md \
	user/examples/strikeslip-2d/step03-multislip-velbc.md \
	user/examples/strikeslip-2d/step03_multislip_velbc-synopsis.md \
	user/examples/strikeslip-2d/step04-varslip.md \
	user/examples/strikeslip-2d/step04_varslip-synopsis.md \
	user/examples/strikeslip-2d/step05-greensfns.md \
	user/examples/strikeslip-2d/step05_greensfns-synopsis.md \
	user/examples/strikeslip-2d/step06-inversion-leastsquares.md \
	user/examples/strikeslip-2d/step07-inversion-catmip.md \
	user/examples/strikeslip-2d/figs/cubit-quad.png \
	user/examples/strikeslip-2d/figs/cubit-tri.png \
	user/examples/strikeslip-2d/figs/diagrams.tex \
	user/examples/strikeslip-2d/figs/generate.sh \
	user/examples/strikeslip-2d/figs/geometry.pdf \
	user/examples/strikeslip-2d/figs/geometry.svg \
	user/examples/strikeslip-2d/figs/geometry-cubit.pdf \
	user/examples/strikeslip-2d/figs/geometry-cubit.svg \
	user/examples/strikeslip-2d/figs/geometry-gmsh.pdf \
	user/examples/strikeslip-2d/figs/geometry-gmsh.svg \
	user/examples/strikeslip-2d/figs/gmsh-tri.png \
	user/examples/strikeslip-2d/figs/step01-diagram.pdf \
	user/examples/strikeslip-2d/figs/step01-diagram.svg \
	user/examples/strikeslip-2d/figs/step01-solution.jpg \
	user/examples/strikeslip-2d/figs/step02-diagram.pdf \
	user/examples/strikeslip-2d/figs/step02-diagram.svg \
	user/examples/strikeslip-2d/figs/step02-solution.jpg \
	user/examples/strikeslip-2d/figs/step03-diagram.pdf \
	user/examples/strikeslip-2d/figs/step03-diagram.svg \
	user/examples/strikeslip-2d/figs/step03-solution.jpg \
	user/examples/strikeslip-2d/figs/step04-diagram.pdf \
	user/examples/strikeslip-2d/figs/step04-diagram.svg \
	user/examples/strikeslip-2d/figs/step04-slip.pdf \
	user/examples/strikeslip-2d/figs/step04-slip.svg \
	user/examples/strikeslip-2d/figs/step04-gpsstations.jpg \
	user/examples/strikeslip-2d/figs/step04-solution.jpg \
	user/examples/strikeslip-2d/figs/step05-diagram.pdf \
	user/examples/strikeslip-2d/figs/step05-diagram.svg \
	user/examples/strikeslip-2d/figs/step05-solution.jpg \
	user/examples/strikeslip-2d/figs/step06-solution.pdf \
	user/examples/strikeslip-2d/figs/step06-solution.svg \
	user/examples/strikeslip-2d/figs/step07a-solution.pdf \
	user/examples/strikeslip-2d/figs/step07a-solution.svg \
	user/examples/strikeslip-2d/figs/step07b-solution.pdf \
	user/examples/strikeslip-2d/figs/step07b-solution.svg \
	user/examples/subduction-2d/index.md \
	user/examples/subduction-2d/common-information.md \
	user/examples/subduction-2d/exercises.md \
	user/examples/subduction-2d/meshing-cubit.md \
	user/examples/subduction-2d/meshing-gmsh.md \
	user/examples/subduction-2d/step01-coseismic.md \
	user/examples/subduction-2d/step02-interseismic.md \
	user/examples/subduction-2d/step03-eqcycle.md \
	user/examples/subduction-2d/figs/cartoon.pdf \
	user/examples/subduction-2d/figs/cartoon.svg \
	user/examples/subduction-2d/figs/cubit-tri.jpg \
	user/examples/subduction-2d/figs/diagrams.tex \
	user/examples/subduction-2d/figs/generate.sh \
	user/examples/subduction-2d/figs/geometry-cubit.pdf \
	user/examples/subduction-2d/figs/geometry-cubit.svg \
	user/examples/subduction-2d/figs/geometry-gmsh.pdf \
	user/examples/subduction-2d/figs/geometry-gmsh.svg \
	user/examples/subduction-2d/figs/geometry.pdf \
	user/examples/subduction-2d/figs/geometry.svg \
	user/examples/subduction-2d/figs/gmsh-tri.png \
	user/examples/subduction-2d/figs/step01-diagram.pdf \
	user/examples/subduction-2d/figs/step01-diagram.svg \
	user/examples/subduction-2d/figs/step01-solution.jpg \
	user/examples/subduction-2d/figs/step02-diagram.pdf \
	user/examples/subduction-2d/figs/step02-diagram.svg \
	user/examples/subduction-2d/figs/step02-solution.jpg \
	user/examples/subduction-2d/figs/step03-diagram.pdf \
	user/examples/subduction-2d/figs/step03-diagram.svg \
	user/examples/subduction-2d/figs/step03-solution.jpg \
	user/examples/subduction-3d/index.md \
	user/examples/subduction-3d/common-information.md \
	user/examples/subduction-3d/exercises.md \
	user/examples/subduction-3d/meshing-cubit.md \
	user/examples/subduction-3d/step01-axialdisp.md \
	user/examples/subduction-3d/step02-coseismic.md \
	user/examples/subduction-3d/step03-interseismic.md \
	user/examples/subduction-3d/step04-eqcycle.md \
	user/examples/subduction-3d/figs/cascadia.png \
	user/examples/subduction-3d/figs/conceptualmodel.png \
	user/examples/subduction-3d/figs/cubit-geometry-patch.png \
	user/examples/subduction-3d/figs/cubit-geometry.png \
	user/examples/subduction-3d/figs/cubit-mesh.jpg \
	user/examples/subduction-3d/figs/diagrams.tex \
	user/examples/subduction-3d/figs/generate.sh \
	user/examples/subduction-3d/figs/step01-diagram.pdf \
	user/examples/subduction-3d/figs/step01-diagram.svg \
	user/examples/subduction-3d/figs/step01-solution.jpg \
	user/examples/subduction-3d/figs/step02-diagram.pdf \
	user/examples/subduction-3d/figs/step02-diagram.svg \
	user/examples/subduction-3d/figs/step02-solution.jpg \
	user/examples/subduction-3d/figs/step03-diagram.pdf \
	user/examples/subduction-3d/figs/step03-diagram.svg \
	user/examples/subduction-3d/figs/step03-solution.jpg \
	user/examples/subduction-3d/figs/step04-diagram.pdf \
	user/examples/subduction-3d/figs/step04-diagram.svg \
	user/examples/subduction-3d/figs/step04-solution.jpg \
	user/examples/subduction-3d/figs/step06-diagram.pdf \
	user/examples/subduction-3d/figs/step06-diagram.svg \
	user/examples/troubleshooting-2d/index.md \
	user/examples/troubleshooting-2d/error-messages.md \
	user/examples/troubleshooting-2d/step01-gravity.md \
	user/examples/troubleshooting-2d/step01-error01.md \
	user/examples/troubleshooting-2d/step01-error02.md \
	user/examples/troubleshooting-2d/step01-error03.md \
	user/examples/troubleshooting-2d/step01-error04.md \
	user/examples/troubleshooting-2d/step01-error05.md \
	user/examples/troubleshooting-2d/step06-twofaults.md \
	user/examples/troubleshooting-2d/step06-error01.md \
	user/examples/troubleshooting-2d/step06-error02.md \
	user/examples/troubleshooting-2d/step06-error03.md \
	user/examples/troubleshooting-2d/step06-error04.md \
	user/examples/troubleshooting-2d/step06-error05.md \
	user/examples/troubleshooting-2d/step06-error06.md \
	user/examples/troubleshooting-2d/step06-error07.md \
	user/examples/troubleshooting-2d/step06-error08.md \
	user/examples/troubleshooting-2d/step06-error09.md \
	user/examples/troubleshooting-2d/figs/step01-diagram.pdf \
	user/examples/troubleshooting-2d/figs/step01-diagram.svg \
	user/examples/troubleshooting-2d/figs/step06-diagram.pdf \
	user/examples/troubleshooting-2d/figs/step06-diagram.svg \
	user/examples/troubleshooting-2d/figs/step06-faults-wrong2.jpg \
	user/examples/troubleshooting-2d/figs/step06-faults-wrong1.jpg \
	user/examples/examples-other.md \
	user/examples/index.md \
	user/examples/paraview-python.md \
	user/file-formats/figs/mesh_quad.pdf \
	user/file-formats/figs/mesh_quad.svg \
	user/file-formats/index.md \
	user/file-formats/meshio-ascii.md \
	user/file-formats/points-list.md \
	user/glossary/index.md \
	user/governingeqns/elasticity-derivation.md \
	user/governingeqns/elasticity-infstrain-prescribedslip/dynamic.md \
	user/governingeqns/elasticity-infstrain-prescribedslip/index.md \
	user/governingeqns/elasticity-infstrain-prescribedslip/quasistatic.md \
	user/governingeqns/elasticity-infstrain/dynamic.md \
	user/governingeqns/elasticity-infstrain/index.md \
	user/governingeqns/elasticity-infstrain/quasistatic.md \
	user/governingeqns/elasticity-infstrain/bulk-rheologies/index.md \
	user/governingeqns/elasticity-infstrain/bulk-rheologies/elasticity-constitutive.md \
	user/governingeqns/elasticity-infstrain/bulk-rheologies/effective-stress.md \
	user/governingeqns/elasticity-infstrain/bulk-rheologies/linear-elastic.md \
	user/governingeqns/elasticity-infstrain/bulk-rheologies/linear-genmaxwell.md \
	user/governingeqns/elasticity-infstrain/bulk-rheologies/linear-maxwell.md \
	user/governingeqns/elasticity-infstrain/bulk-rheologies/powerlaw.md \
	user/governingeqns/elasticity-infstrain/bulk-rheologies/figs/viscoelastic-schematic.pdf \
	user/governingeqns/elasticity-infstrain/bulk-rheologies/figs/viscoelastic-schematic.svg \
	user/governingeqns/incompressible-elasticity.md \
	user/governingeqns/index.md \
	user/governingeqns/petsc-formulation.md \
	user/governingeqns/poroelasticity/dynamic.md \
	user/governingeqns/poroelasticity/index.md \
	user/governingeqns/poroelasticity/quasistatic.md \
	user/index.md \
	user/install/figs/install_choices.pdf \
	user/install/figs/install_choices.svg \
	user/install/figs/install_choices.tex \
	user/install/index.md \
	user/intro/architecture.md \
	user/intro/figs/packages.pdf \
	user/intro/figs/packages.svg \
	user/intro/figs/packages.tex \
	user/intro/figs/pyre_architecture.pdf \
	user/intro/figs/pyre_architecture.svg \
	user/intro/figs/workflow.pdf \
	user/intro/figs/workflow.svg \
	user/intro/figs/workflow.tex \
	user/intro/getting-help.md \
	user/intro/history.md \
	user/intro/index.md \
	user/intro/new.md \
	user/intro/workflow.md \
	user/physics/bc/absorbing-dampers.md \
	user/physics/bc/index.md \
	user/physics/bc/time-dependent.md \
	user/physics/faults/figs/cohesive-cell.pdf \
	user/physics/faults/figs/cohesive-cell.svg \
	user/physics/faults/figs/fault-edge.pdf \
	user/physics/faults/figs/fault-edge.svg \
	user/physics/faults/figs/fault-orientation.pdf \
	user/physics/faults/figs/fault-orientation.svg \
	user/physics/faults/figs/plot_slipfn.py \
	user/physics/faults/figs/slip-motions.pdf \
	user/physics/faults/figs/slip-motions.svg \
	user/physics/faults/figs/slipfn-brune.pdf \
	user/physics/faults/figs/slipfn-brune.svg \
	user/physics/faults/figs/slipfn-constrate.pdf \
	user/physics/faults/figs/slipfn-constrate.svg \
	user/physics/faults/figs/slipfn-liucos.pdf \
	user/physics/faults/figs/slipfn-liucos.svg \
	user/physics/faults/figs/slipfn-ramp.pdf \
	user/physics/faults/figs/slipfn-ramp.svg \
	user/physics/faults/figs/slipfn-step.pdf \
	user/physics/faults/figs/slipfn-step.svg \
	user/physics/faults/index.md \
	user/physics/faults/prescribed-slip.md \
	user/physics/faults/slip-impulses.md \
	user/physics/index.md \
	user/physics/materials/elasticity.md \
	user/physics/materials/incompressible-elasticity.md \
	user/physics/materials/index.md \
	user/problems/figs/hdf5layout.pdf \
	user/problems/figs/hdf5layout.svg \
	user/problems/figs/hdf5layout.tex \
	user/problems/index.md \
	user/problems/output.md \
	user/problems/problems.md \
	user/run-pylith/figs/cells2d.pdf \
	user/run-pylith/figs/cells2d.svg \
	user/run-pylith/figs/cells2d.tex \
	user/run-pylith/figs/cells3d.pdf \
	user/run-pylith/figs/cells3d.svg \
	user/run-pylith/figs/cells3d.tex \
	user/run-pylith/figs/paramgui_detail.png \
	user/run-pylith/figs/paramgui_parameters.png \
	user/run-pylith/figs/paramgui_parameters.xcf \
	user/run-pylith/figs/paramgui_startup.png \
	user/run-pylith/figs/paramgui_version.png \
	user/run-pylith/figs/paramgui_version.xcf \
	user/run-pylith/figs/pylith_simulation.pdf \
	user/run-pylith/figs/pylith_simulation.svg \
	user/run-pylith/figs/pylith_simulation.tex \
	user/run-pylith/figs/refinement2x.pdf \
	user/run-pylith/figs/refinement2x.svg \
	user/run-pylith/index.md \
	user/run-pylith/mesh.md \
	user/run-pylith/overview.md \
	user/run-pylith/parameter-gui.md \
	user/run-pylith/petsc-options.md \
	user/run-pylith/pylithapp.md \
	user/run-pylith/troubleshooting.md \
	user/run-pylith/utilities.md \
	developer/contributing/documentation/install.md \
	developer/contributing/documentation/index.md \
	developer/contributing/documentation/quickref.md \
	developer/contributing/newmaterial.md \
	developer/contributing/workflow.md \
	developer/contributing/codingstyle.md \
	developer/contributing/rebuilding.md \
	developer/contributing/petscfem.md \
	developer/contributing/index.md \
	developer/contributing/codelayout.md \
	developer/contributing/git-quickref.md \
	developer/testing/libtests.md \
	developer/testing/run-cxxtests.md \
	developer/testing/fullscale.md \
	developer/testing/ci-docker.md \
	developer/testing/pytests.md \
	developer/testing/mmstests.md \
	developer/testing/fields.md \
	developer/testing/index.md \
	developer/testing/debugging-tools.md \
	developer/index.md \
	developer/contributing/figs/classdiagram_bc.pdf \
	developer/contributing/figs/classdiagram_bc.png \
	developer/contributing/figs/classdiagram_bc.tex \
	developer/contributing/figs/classdiagram_material.pdf \
	developer/contributing/figs/classdiagram_material.png \
	developer/contributing/figs/classdiagram_material.tex \
	developer/contributing/figs/classdiagram_mesher.pdf \
	developer/contributing/figs/classdiagram_mesher.svg \
	developer/contributing/figs/classdiagram_mesher.tex \
	developer/contributing/figs/classdiagram_output.pdf \
	developer/contributing/figs/classdiagram_output.png \
	developer/contributing/figs/classdiagram_output.tex \
	developer/contributing/figs/classdiagram_physics_fem.pdf \
	developer/contributing/figs/classdiagram_physics_fem.png \
	developer/contributing/figs/classdiagram_physics_fem.tex \
	developer/contributing/figs/classdiagram_problem.pdf \
	developer/contributing/figs/classdiagram_problem.png \
	developer/contributing/figs/classdiagram_problem.tex \
	developer/contributing/figs/classdiagram_pylithapp.pdf \
	developer/contributing/figs/classdiagram_pylithapp.png \
	developer/contributing/figs/classdiagram_pylithapp.tex \
	developer/contributing/figs/classdiagram_solution.pdf \
	developer/contributing/figs/classdiagram_solution.png \
	developer/contributing/figs/classdiagram_solution.tex \
	developer/contributing/figs/gitworkflow_branch.pdf \
	developer/contributing/figs/gitworkflow_branch.png \
	developer/contributing/figs/gitworkflow_branch.tex \
	developer/contributing/figs/gitworkflow_repositories.pdf \
	developer/contributing/figs/gitworkflow_repositories.png \
	developer/contributing/figs/gitworkflow_repositories.tex \
	developer/contributing/figs/material_auxiliarylayout.pdf \
	developer/contributing/figs/material_auxiliarylayout.png \
	developer/contributing/figs/material_auxiliarylayout.tex \
	developer/contributing/figs/meshtopology.pdf \
	developer/contributing/figs/meshtopology.png \
	developer/contributing/figs/meshtopology.tex \
	developer/contributing/figs/umlstyle.tex


# End of file 
