# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
# Brad T. Aagaard, U.S. Geological Survey
# Charles A. Williams, GNS Science
# Matthew G. Knepley, University at Buffalo
#
# This code was developed as part of the Computational Infrastructure
# for Geodynamics (http://geodynamics.org).
#
# Copyright (c) 2010-2022 University of California, Davis
#
# See LICENSE.md for license information.
#
# ----------------------------------------------------------------------

dist_noinst_DATA = \
	README.md

SUBDIRS = \
	barwaves-2d \
	box-2d \
	box-3d \
	meshing-cubit \
	magma-2d \
	reverse-2d \
	strikeslip-2d \
	subduction-2d \
	subduction-3d \
	troubleshooting-2d \
	point_source-2d \
	ricker_source-2d


# End of file 
