# =================================================================================================
# This code is part of PyLith, developed through the Computational Infrastructure
# for Geodynamics (https://github.com/geodynamics/pylith).
#
# Copyright (c) 2010-2024, University of California, Davis and the PyLith Development Team.
# All rights reserved.
#
# See https://mit-license.org/ and LICENSE.md and for license information. 
# =================================================================================================

dist_noinst_DATA = \
	README.md

SUBDIRS = \
	barwaves-2d \
	box-2d \
	box-3d \
	meshing-cubit \
	magma-2d \
	reverse-2d \
	strikeslip-2d \
	subduction-2d \
	subduction-3d \
	troubleshooting-2d


# End of file 
